# FTXUI_BADWOLF

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  ftxui.pc.in
.bcr/: metadata.template.json  source.template.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: apps.yaml  build.yaml  demos.yaml  python.yaml
apps/: CMakeLists.txt
apps/ftdb/: main.cpp
apps/ftgit/: main.cpp
apps/ftop/: main.cpp
bindings/rust/: Cargo.toml  build.rs
bindings/rust/examples/: hello.rs
bindings/rust/src/: builder.rs  ffi.rs  lib.rs
cmake/: ftxui_export.cmake  ftxui_find_google_benchmark.cmake  ftxui_find_google_test.cmake  ftxui_install.cmake  ftxui_modules.cmake  ftxui_package.cmake  ftxui_sqlite.cmake  ftxui_test.cmake  ftxui_wasm.cmake
doc/: cookbook.md  getting-started.md  header.html  installation.md  installation_cmake.md  installation_manual.md  installation_nix.md  introduction.md  migration-bubbletea.md  migration-ncurses.md  migration-ratatui.md  migration-textual.md  module-component.md  module-dom.md  module-screen.md  ui-layer.md
docs/: _config.yml  api-reference.md  api.html  codegen.html  collab.html  colors.html  deep-dive.html  distributed.html  examples.html  executive.html  features.html  getting-started.html  hot-reload.html  index.html  json.html  layout.html  live-data.html  llm-bridge.html  multiplayer.html  nl-theming.html  physics.html  playground.html  plugins.html  registry.html  spatial.html  sql.html  time-travel.html  typewriter.html  video.html  voice-themes.html  voice.html  web-bridge.html  webgl.html
docs/css/: glass.css
docs/js/: main.js
examples/: CMakeLists.txt  index.html  single_header_demo.cpp
examples/ui/: CMakeLists.txt  animation_demo.cpp  bind_demo.cpp  builder_demo.cpp  charts_demo.cpp  codegen_demo.cpp  collab_dashboard.cpp  collab_demo.cpp  color_demo.cpp  command_palette_demo.cpp  config_demo.cpp  constraint_demo.cpp  datatable_demo.cpp  distributed_demo.cpp  filepicker_demo.cpp  form_demo.cpp  galaxy_demo.cpp  geomap_demo.cpp  globe_demo.cpp  hot_reload_demo.cpp  imperial_demo.cpp  json_demo.cpp  keymap_demo.cpp  layout_demo.cpp  list_demo.cpp  live_demo.cpp  llm_demo.cpp  log_demo.cpp  markdown_demo.cpp  model_binding_demo.cpp  multiplayer_demo.cpp  mvu_counter.cpp  mvu_todo.cpp  network_reactive_demo.cpp  new_features_demo.cpp  nl_theme_demo.cpp  notification_demo.cpp  physics_demo.cpp  plugin_demo.cpp  process_demo.cpp  (+24 more)
examples/ui/sample_plugin/: CMakeLists.txt  hello_plugin.cpp
examples/wasm/: CMakeLists.txt  hello_wasm.cpp  wasm_shell.html  webgl_demo.cpp  webgl_shell.html
include/ftxui/: ui.hpp
include/ftxui-c/: ftxui.h
include/ftxui/ui/: alert.hpp  animation.hpp  app.hpp  background_task.hpp  bind.hpp  canvas.hpp  charts.hpp  codegen.hpp  collab.hpp  command_palette.hpp  config_editor.hpp  constraint_layout.hpp  data_context.hpp  datatable.hpp  debug_overlay.hpp  dialog.hpp  distributed.hpp  event_recorder.hpp  filepicker.hpp  form.hpp  fwd.hpp  galaxy_map.hpp  geojson.hpp  geomap.hpp  globe.hpp  grid.hpp  hot_reload.hpp  inspector.hpp  json.hpp  keymap.hpp  layout.hpp  lcars.hpp  list.hpp  live_source.hpp  llm_bridge.hpp  log_panel.hpp  markdown.hpp  model_binding.hpp  multiplayer.hpp  mvu.hpp  (+36 more)
packaging/conan/: conanfile.py
packaging/debian/: control
packaging/homebrew/: ftxui.rb
packaging/vcpkg/: portfile.cmake  vcpkg.json
python/: CMakeLists.txt  README.md  pyproject.toml  setup.py
python/examples/: counter.py  dashboard.py  markdown_viewer.py
python/pyftxui/: __init__.py  _ftxui.pyi  app.py  components.py  reactive.py  theme.py
python/src/: bindings.cpp
registry/: index.json
registry/hex-viewer/: component.hpp
registry/json-tree/: component.hpp
registry/sparkline-widget/: component.hpp
src/ftxui/: ui.cppm
src/ftxui/component/: app.cpp
src/ftxui/ui/: alert.cpp  alert_test.cpp  animation.cpp  animation_test.cpp  binding_test.cpp  canvas.cpp  charts.cpp  codegen.cpp  codegen_test.cpp  collab.cpp  collab_test.cpp  command_palette.cpp  config_editor.cpp  constraint_layout.cpp  constraint_layout_test.cpp  datatable_test.cpp  debug_overlay.cpp  devtools_test.cpp  dialog.cpp  dialog_test.cpp  distributed.cpp  distributed_test.cpp  event_recorder.cpp  filepicker.cpp  form.cpp  form_test.cpp  galaxy_map.cpp  galaxy_test.cpp  geojson.cpp  geomap.cpp  globe.cpp  grid.cpp  grid_test.cpp  hot_reload.cpp  hot_reload_test.cpp  inspector.cpp  json.cpp  json_test.cpp  keymap.cpp  keymap_test.cpp  (+64 more)
src/ftxui/ui_modules/: App.cppm  BackgroundTask.cppm  CommandPalette.cppm  DataTable.cppm  Dialog.cppm  Form.cppm  Grid.cppm  Keymap.cppm  Layout.cppm  List.cppm  LogPanel.cppm  MVU.cppm  Notification.cppm  Progress.cppm  Router.cppm  SimpleTable.cppm  State.cppm  TextInput.cppm  Theme.cppm  Tree.cppm  Widgets.cppm  Wizard.cppm
src/ftxui_c/: ftxui_c.cpp  test_c_api.c
tools/: amalgamate.py  badwolf  build_translations.py  embed_geojson.py  ftxui
