[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pyftxui"
version = "0.1.0"
description = "Python bindings for the FTXUI terminal UI library"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["tui", "terminal", "ui", "ftxui", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Terminals",
]

[project.optional-dependencies]
dev = ["pytest", "mypy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyftxui*"]

[tool.setuptools.package-data]
pyftxui = ["*.pyi", "*.so", "*.pyd"]
