[package]
name = "ftxui-badwolf"
version = "0.1.0"
edition = "2021"
description = "Safe Rust bindings for FTXUI BadWolf"
license = "MIT"
repository = "https://github.com/louiscrocker/FTXUI_BADWOLF"

[lib]
name = "ftxui"
crate-type = ["rlib"]

[[example]]
name = "hello"

[build-dependencies]
# build.rs locates and links libftxui-c

[dependencies]
