set(DIRECTORY_LIB ui)

example(charts_demo)
example(form_demo)
example(mvu_counter)
example(mvu_todo)
example(layout_demo)
example(keymap_demo)
example(state_demo)
example(reactive_demo)
example(simple_table_demo)
example(progress_demo)
example(datatable_demo)
example(tree_demo)
example(router_demo)
example(command_palette_demo)
example(notification_demo)
example(wizard_demo)
example(log_demo)
example(list_demo)
example(filepicker_demo)
example(config_demo)
example(showcase)
example(new_features_demo)
example(geomap_demo)
example(globe_demo)
example(world_ops_demo)
example(process_demo)
example(markdown_demo)
example(virtual_table_demo)
example(time_travel_demo)
example(bind_demo)
example(reactive_list_demo)
example(model_binding_demo)
example(recorder_demo)
example(builder_demo)
example(galaxy_demo)
example(spatial_demo)
example(network_reactive_demo)
example(animation_demo)
example(starship_demo)
example(imperial_demo)
example(collab_demo)
example(collab_dashboard)
example(llm_demo)
example(registry_demo)
example(live_demo)
example(distributed_demo)
example(sysmon_demo)
example(json_demo)
example(sql_demo)
example(typewriter_demo)
example(color_demo)
example(web_bridge_demo)
example(constraint_demo)
example(physics_demo)
example(nl_theme_demo)
example(video_demo)
example(voice_demo)
example(hot_reload_demo)
example(plugin_demo)
example(codegen_demo)
example(multiplayer_demo)

# Sample plugin shared library (loaded at runtime via dlopen).
add_subdirectory(sample_plugin)

# Copy world map GeoJSON data next to the binary at build time so examples
# can locate it at runtime via their relative-path search.
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/world_ne110m.geojson"
  "${CMAKE_CURRENT_BINARY_DIR}/world_ne110m.geojson"
  COPYONLY
)
